--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Smartexam Dummy Page
+<html>
+    <head></head>
+    <body>
+        <iframe
+            src="https://rachel.smartexamdev.com/widget/login/" 
+            width="500" height="500">
+        </iframe>
+    </body>
+</html>
+
